# Refrain

./: .env  .gitignore  CLAUDE.md  README.md  api_speed_test_report.md  pyproject.toml  test_api_speed_temp.py
.claude/: settings.local.json
.cursor/commands/: git.md
.github/: .gitkeep  copilot-instructions.md
src/: README.md
src/refrain/: __init__.py
src/refrain/cli/: __init__.py  main.py
src/refrain/cli/commands/: __init__.py  chat.py  model.py
src/refrain/core/: __init__.py  logger.py
src/refrain/core/config/: __init__.py  config.py  manager.py  schema.py
src/refrain/core/llm/: README.md  __init__.py  base.py  factory.py  openai_provider.py  schemas.py
src/refrain/core/llm/chat/: __init__.py  base.py  factory.py  openai_provider.py  schemas.py
src/refrain/core/llm/vector/: __init__.py  base.py
src/refrain/engine/: __init__.py
src/refrain/engine/orchestrator/: __init__.py
src/refrain/resources/: __init__.py  system.md
src/refrain/skills/: __init__.py
src/refrain/skills/base/: __init__.py
src/refrain/skills/registry/: __init__.py
src/refrain/skills/toolbox/: __init__.py
src/refrain/utils/: __init__.py
src/refrain/utils/fs/: __init__.py
src/refrain/utils/ui/: __init__.py
tests/: README.md  conftest.py  test_cli.py  test_core.py  test_utils.py
z_docs/: index.md
z_docs/快速开始/: 入门指南.md
z_docs/架构设计/: 大致结构.md  接口文档.md  架构图.md  项目结构.md
z_docs/设计理念/: 介绍.md  设计哲学.md
