[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refrain"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "keyring>=25.0.0",
    "questionary>=2.0.0",
    "pyfiglet>=1.0.2"
]

[project.scripts]
rf = "refrain.cli:app"
refrain = "refrain.cli:app"
